# codexryzy

./: .env.example  .gitignore  CHAT_HISTORY_2026-04-15_work-assistant-dashboard-fix.md  DEPLOY.md  README.md  docker-compose.yml  fix_workflows_1_2_3.py  index.html  librechat.yaml  package.json  railway.json  setup_email_ingest.py
backend/: requirements.txt
bjhbhjbjhbjhbjhbhj/: env
docker/: README.md
docs/: ARCHITECTURE.md  document-ingest.md  historical-mail-backfill.md  librechat-tools-setup.md  quatarly-routing.md  railway-bootstrap.md  web-enrichment-worker.md  work-assistant-architecture.md
frontend/: index.html  package.json
migration/: INSTRUKCJE.md
scripts/: backfill_mail_knowledge_base.py  backfill_mail_to_work_assistant.py  document_extractors.py  (+9 more)
services/work-assistant-api/: .env.example  .env.railway.example  .rebuild-trigger  Dockerfile  README.md  migrate.py  pyproject.toml  railway.toml
services/work-assistant-api/app/: __init__.py  config.py  database.py  main.py  schemas.py  security.py
services/work-assistant-api/app/clients/: chat_completions.py  embeddings.py  vikunja.py
services/work-assistant-api/app/routers/: assistant.py  briefing.py  coverage.py  credits.py  dashboard.py  documents.py  enrichment.py  health.py  meetings.py  search.py  tasks.py  usage.py
services/work-assistant-api/app/services/: assistant.py  coverage.py  dashboard.py  documents.py  enrichment.py  ingest.py  meetings.py  search.py  tasks.py  usage.py
services/work-assistant-api/sql/: 001_init.sql  002_enrichment.sql  003_llm_usage.sql  004_briefing.sql
(+116 files in other folders)
