[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "work-assistant-api"
version = "0.1.0"
description = "Server-side knowledge API for the work assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "psycopg-pool>=3.2,<4.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
